test/good/strings/char3.px

print 'x' < 'y' and ('x' == 'x' or 'x' == 'y') and 'z' >= 'y' > 'x'
print 'z' <= 'x' or 'z' != 'z'
