test/bad/generics/def04.px

func f<Num N>(N x) def
    y = N
